--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %}Internal Server Error{% endblock %}
+
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 text-center">
-            <h1 class="display-4">500 - Internal Server Error</h1>
-            <p class="lead">{{ error_message if error_message else 'An unexpected error has occurred. Please try again later.' }}</p>
-            <a href="{{ url_for('main.index') }}" class="btn btn-primary mt-3">Return to Home</a>
-        </div>
-    </div>
+<div class="container text-center">
+    <h1 class="display-1">500</h1>
+    <h2>Internal Server Error</h2>
+    <p class="lead">Something went wrong on our end. Please try again later.</p>
+    <a href="{{ url_for('main.index') }}" class="btn btn-primary">Return to Home</a>
 </div>
 {% endblock %} 
