--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}404 Not Found{% endblock %}
+{% block title %}Page Not Found{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 text-center">
-            <h1 class="display-4">404 - Not Found</h1>
-            <p class="lead">{{ error_message if error_message else 'The requested resource was not found.' }}</p>
-            <a href="{{ url_for('main.index') }}" class="btn btn-primary mt-3">Return to Home</a>
-        </div>
-    </div>
+<div class="container text-center">
+    <h1 class="display-1">404</h1>
+    <h2>Page Not Found</h2>
+    <p class="lead">The page you are looking for does not exist.</p>
+    <a href="{{ url_for('main.index') }}" class="btn btn-primary">Return to Home</a>
 </div>
 {% endblock %} 
